--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "gulp": "^3.8.11",
+    "gulp-copy": "0.0.2",
     "gulp-jade": "^1.0.0",
     "jade": "^1.9.2",
     "node-sass": "^2.0.1"
