--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "^3.8.11",
     "gulp-copy": "0.0.2",
     "gulp-jade": "^1.0.0",
+    "gulp-sass": "^1.3.3",
     "jade": "^1.9.2",
     "node-sass": "^2.0.1"
   }
