--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,6 @@
     "jquery": "~2.1.3",
     "lodash": "~3.5.0",
     "angular": "~1.3.14",
-    "bootstrap": "~3.3.2"
+    "bootstrap-sass": "~3.3.3"
   }
 }
