--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-copy": "0.0.2",
     "gulp-jade": "^1.0.0",
     "gulp-sass": "^1.3.3",
+    "gulp-watch": "^4.1.1",
     "jade": "^1.9.2",
     "node-sass": "^2.0.1"
   }
