--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
     "jquery": "~2.1.3",
     "lodash": "~3.5.0",
     "angular": "~1.3.14",
-    "bootstrap-sass": "~3.3.3"
+    "bootstrap-sass": "~3.3.3",
+    "font-awesome": "~4.3.0",
+    "angular-ui-router": "~0.2.13"
   }
 }
