--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "best-review",
+  "name": "template",
   "version": "0.0.0",
-  "homepage": "https://github.com/erinpagemd/best-review",
+  "homepage": "https://github.com/erinpagemd/template",
   "authors": [
-    "YOUR NAME <erinpagemd@yahoo.com>"
+    "Erin <erinpagemd@yahoo.com>"
   ],
-  "description": "Angular app using Best Buy developer API",
+  "description": "Template Angular App",
   "license": "MIT",
   "ignore": [
     "**/.*",
@@ -20,6 +20,7 @@
     "angular": "~1.3.14",
     "bootstrap-sass": "~3.3.3",
     "font-awesome": "~4.3.0",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "firebase": "~2.2.2"
   }
 }
