--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "url": "https://github.com/erinpagemd/best-review/issues"
   },
   "homepage": "https://github.com/erinpagemd/best-review",
-  "dependencies": {},
+  "dependencies": {
+    "firebase": "^2.2.2"
+  },
   "devDependencies": {
     "bower": "^1.3.12",
     "gulp": "^3.8.11",
