--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "best-review",
+  "name": "Up-and-Go-BBQ",
   "version": "1.0.0",
-  "description": "Angular app using the Best Buy Developer API",
+  "description": "Home page for Up and Go BBQ.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/erinpagemd/best-review.git"
+    "url": "https://github.com/erinpagemd/bbq.git"
   },
   "author": "Erin M Page",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/erinpagemd/best-review/issues"
+    "url": "https://github.com/erinpagemd/bbq/issues"
   },
-  "homepage": "https://github.com/erinpagemd/best-review",
+  "homepage": "https://github.com/erinpagemd/bbq",
   "dependencies": {
-    "firebase": "^2.2.2"
   },
   "devDependencies": {
     "bower": "^1.3.12",
     "gulp": "^3.8.11",
     "gulp-copy": "0.0.2",
+    "gulp-connect": "^2.2.0",
     "gulp-jade": "^1.0.0",
+    "gulp-livereload": "^3.8.0",
     "gulp-sass": "^1.3.3",
     "gulp-watch": "^4.1.1",
     "jade": "^1.9.2",
